--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,7 @@
 baseurl = "http://qa.nuxeo.org/benchmarks/"
 languageCode = "en-us"
 title = "Nuxeo Ref Bench"
+SectionPagesMenu = "main"
 [params]
   description = "Nuxeo Reference Benchmarks"
   author = "Nuxeo"
