Order bench per profile in group

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "http://qa.nuxeo.org/benchmarks/"
+baseurl = "http://qa.nuxeo.org/benchmarks"
 languageCode = "en-us"
 title = "Nuxeo Ref Bench"
 SectionPagesMenu = "main"
