NXBT-1016: note on mssql deadlock

--- a/data/analysis/suite.yml
+++ b/data/analysis/suite.yml
@@ -37,7 +37,7 @@
 **CRUD**
 
 
-- Same as Update, mssql encounter errors on deletion
+- Same as Update, mssql encounter errors on deletion [NXP-19335](https://jira.nuxeo.com/browse/NXP-19335).
 
 
 **Reindex**
