--- a/data/analysis/suite.yml
+++ b/data/analysis/suite.yml
@@ -48,6 +48,15 @@
 
 "
 
+"16w12 NXBT-1018 Test default pool size": "Having more than 4 threads in the default pool increase very slightly
+asynchronous activities. This affects also the synchronous parts.
+
+
+So far it is not interesting to use more than 4 threads for the default pool.
+This should be tested again when audit and ft updater optimizations are merged because
+they are the first bottleneck and they may prevent to see benefits of increasing the pool size."
+
+
 "16w11 NXP-17934/NXP-17862 audit and fulltext updater": "This benchmark suite contains 2 major optimizations:
 
 
