--- a/config.toml
+++ b/config.toml
@@ -3,5 +3,5 @@ languageCode = "en-us"
 title = "Nuxeo Ref Bench"
 SectionPagesMenu = "main"
 [params]
-  description = "Nuxeo Reference Benchmarks"
+  description = "Reference Benchmarks"
   author = "Nuxeo"
