create a misc for NXP-19754

--- a/data/bench/488.yml
+++ b/data/bench/488.yml
@@ -603,7 +603,7 @@ classifier: "withProperties"
 distribution: "task-NXP-19754-importer-test-withProperties"
 default_category: "workbench"
 
-import_dps: 0.00.00.0114.00.00.00.0675.7
-import_docs: 0001167000101217
+import_dps: 675.74
+import_docs: 101217
 reindex_docs: 194400
 reindex_dps: 3357.2
