--- a/data/analysis/suite.yml
+++ b/data/analysis/suite.yml
@@ -1,17 +1,17 @@
 # Here you can comment bench suite using markdown
-"Nuxeo 9.1": "- A new backend **MarkLogic** has been added to the benchmark matrix.
+"Nuxeo 9.1": "- A new **MarkLogic** backend has been added to the benchmark matrix.
 
 
 - Since LTS 2016 the **import** has been tuned on DBS (MongoDB and MarkLogic) to [remove contentions](https://jira.nuxeo.com/browse/NXP-21712),
-  [reduce the number of queries](https://jira.nuxeo.com/browse/NXP-20595) and [make cache more efficient](https://jira.nuxeo.com/browse/NXP-21678).
-  This improves the import throughput by **20%**.
+  [reduce the number of queries](https://jira.nuxeo.com/browse/NXP-20595) and [make cache more efficient](https://jira.nuxeo.com/browse/NXP-21678),
+  improving the import throughput by **20%**.
 
 
-- The **Elasticsearch reindexing** has been improved by [limiting the size of bulk command](https://jira.nuxeo.com/browse/NXP-21227) and by [reducing the JSON representation](https://jira.nuxeo.com/browse/NXP-21677).
-  This gives a **33%** gain.
+- The **Elasticsearch reindexing** has been improved by [limiting the size of bulk command](https://jira.nuxeo.com/browse/NXP-21227) and by [reducing the JSON representation](https://jira.nuxeo.com/browse/NXP-21677),
+  resulting in a **33%** gain.
 
 
-- There are some regression on write and search REST operation, some are related to GC problem after JSF benchmarks, investigations in process.
+- There are some regression on write and search REST operation, some are related to GC problem after JSF benchmarks, [investigations in process](https://jira.nuxeo.com/browse/NXBT-1731).
 "
 
 "Nuxeo LTS 2016": "**Import**
