--- a/data/analysis/suite.yml
+++ b/data/analysis/suite.yml
@@ -62,7 +62,7 @@ These tests shows 2 ways to improve mass audit log:
   elasticsearch activity.
 
 
-Combining both gives a xX increase, the import speed from 907s to Xs.
+Combining both gives a x3.4 gain, the total import duration is 261s vs 907s.
 "
 
 "Nuxeo LTS 2017": "**Import** Better than previous LTS
