NXP-25603: Add kafka tag to report

--- a/data/bench/1573.yml
+++ b/data/bench/1573.yml
@@ -586,6 +586,7 @@ nuxeonodes: 2
 classifier: "kafka audit and workmanager"
 distribution: "lastsnapshot"
 default_category: "misc"
+kafka: true
 
 import_dps: 884.9
 import_docs: 101178
