--- a/data/bench/1575.yml
+++ b/data/bench/1575.yml
@@ -586,6 +586,7 @@ nuxeonodes: 2
 classifier: "kafka audit, workmanager and pubsub"
 distribution: "lastsnapshot"
 default_category: "misc"
+kafka: true
 
 import_dps: 965.3
 import_docs: 101162
