--- a/data/bench/1579.yml
+++ b/data/bench/1579.yml
@@ -586,6 +586,7 @@ nuxeonodes: 2
 classifier: "kafka audit, workmanager, pubsub, lockmanager and kvstore"
 distribution: "feature-NXP-25617-mongodb-temp-kvstore"
 default_category: "misc"
+kafka: true
 
 import_dps: 905.0
 import_docs: 101149
