--- a/data/bench/1580.yml
+++ b/data/bench/1580.yml
@@ -586,6 +586,7 @@ nuxeonodes: 2
 classifier: "kafka audit avro, workmanager, pubsub avroBinary, lockmanager and kvstore"
 distribution: "feature-NXP-25617-mongodb-temp-kvstore"
 default_category: "misc"
+kafka: true
 
 import_dps: 938.5
 import_docs: 101156
