--- a/data/bench/1574.yml
+++ b/data/bench/1574.yml
@@ -586,6 +586,7 @@ nuxeonodes: 2
 classifier: "reference no kafka"
 distribution: "lastsnapshot"
 default_category: "misc"
+kafka: false
 
 import_dps: 1055.2
 import_docs: 101098
