--- a/data/bench/1581.yml
+++ b/data/bench/1581.yml
@@ -1,4 +1,4 @@
-bench_date: 2018-08-22 16:50:19
+benchmark_date: 2018-08-22 16:50:19
 
 import_duration: 234.2
 import_avg: 116739.0
@@ -592,3 +592,4 @@ import_dps: 858.3
 import_docs: 101135
 reindex_docs: 275018
 reindex_dps: 2838.1
+benchmark_duration: 2269.7
