Updated Title and index styling

--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseurl = "https://benchmarks.nuxeo.com/"
 languageCode = "en-us"
-title = "Nuxeo Ref Bench"
+title = "Nuxeo Benchmarks"
 SectionPagesMenu = "main"
 [params]
   description = "Benchmarks"
