--- a/data/bench/1685.yml
+++ b/data/bench/1685.yml
@@ -649,13 +649,4 @@ benchmark_duration: 11974.6
 import_dps: 929.1
 import_docs: 1010227
 reindex_docs: 2182693
-2182693
-2182693
-2182693
-446000
-2182693
-2182693
-2182693
-2182693
-2182693
-reindex_dps: 2182693.0
+reindex_dps: 0
