Testing site generation on new cloud front

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,5 @@
-baseurl = "https://benchmarks.nuxeo.com/"
+baseurl = "http://d3r0n26r95d4os.cloudfront.net/"
+#baseurl = "https://benchmarks.nuxeo.com/"
 languageCode = "en-us"
 title = "Nuxeo Benchmarks"
 SectionPagesMenu = "main"
