Revert "Testing site generation on new cloud front"
This reverts commit 61a0000ba8009ea0eeb1369f9a1388d57fd0f920.

--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,4 @@
-baseurl = "http://d3r0n26r95d4os.cloudfront.net/"
-#baseurl = "https://benchmarks.nuxeo.com/"
+baseurl = "https://benchmarks.nuxeo.com/"
 languageCode = "en-us"
 title = "Nuxeo Benchmarks"
 SectionPagesMenu = "main"
