Add analysis on elastic upgrade to 6.8.3

--- a/data/analysis/suite.yml
+++ b/data/analysis/suite.yml
@@ -1,4 +1,6 @@
 # Here you can comment bench suite using markdown"
+"19w41 NXBT-3006 Elastic 6.8 vs 6.4": "No visible difference between Elasticsearch 6.4.2/Java 8 and Elasticsearch 6.8.3/Java 11"
+
 
 "Nuxeo LTS 2019": "By default Java 8 is used as runtime unless the classifier refers to Java 11.
 Java 11 introduces a performance regression in the authentication layer [NXP-27917](https://jira.nuxeo.com/browse/NXP-27917).
