--- a/data/bench/nco-21.yml
+++ b/data/bench/nco-21.yml
@@ -445,7 +445,7 @@ build_number: nco-21
 build_url: "https://qa.nuxeo.org/jenkins/job/Misc/job/nuxeo-nco-bench/21/"
 job_name: "Misc/nuxeo-nco-bench"
 dbprofile: "mongodb"
-bench_suite: "NCO Readiness instance"
+bench_suite: "Check Readiness instance"
 nuxeonodes: 4
 esnodes: 3
 classifier: ""
