--- a/data/bench/nco-36.yml
+++ b/data/bench/nco-36.yml
@@ -456,5 +456,5 @@ import_docs: 100000
 benchmark_duration: 2253
 
 import_dps: 387.6
-reindex_docs: 
-reindex_dps: NA
+reindex_docs: 346275
+reindex_dps: 1415.1
