Add reindexing metrics

--- a/data/bench/nco-37.yml
+++ b/data/bench/nco-37.yml
@@ -456,5 +456,5 @@ import_docs: 100000
 benchmark_duration: 2331
 
 import_dps: 386.2
-reindex_docs: 
-reindex_dps: NA
+reindex_docs: 334895
+reindex_dps: 1466.9
