Add index metadata

--- a/data/bench/nco-38.yml
+++ b/data/bench/nco-38.yml
@@ -456,5 +456,5 @@ import_docs: 1000000
 benchmark_duration: 10402
 
 import_dps: 364.9
-reindex_docs: 
-reindex_dps: NA
+reindex_docs: 2553794
+reindex_dps: 1017.2
