--- a/data/bench/nco-43.yml
+++ b/data/bench/nco-43.yml
@@ -456,5 +456,5 @@ import_docs: 100000
 benchmark_duration: 5659
 
 import_dps: 127.8
-reindex_docs: 
-reindex_dps: NA
+reindex_docs: 746239
+reindex_dps: 435.1
