Add reindex rate nco-47

--- a/data/bench/nco-47.yml
+++ b/data/bench/nco-47.yml
@@ -456,5 +456,5 @@ import_docs: 100000
 benchmark_duration: 3725
 
 import_dps: 131.5
-reindex_docs: 
-reindex_dps: NA
+reindex_docs: 344919
+reindex_dps: 542.8
