--- a/data/bench/nco-49.yml
+++ b/data/bench/nco-49.yml
@@ -456,5 +456,5 @@ import_docs: 100000
 benchmark_duration: 3144
 
 import_dps: 195.4
-reindex_docs: 
-reindex_dps: NA
+reindex_docs: 344891
+reindex_dps: 558.7
