--- a/data/bench/nco-56.yml
+++ b/data/bench/nco-56.yml
@@ -456,5 +456,5 @@ import_docs: 100000
 benchmark_duration: 2697
 
 import_dps: 225.4
-reindex_docs: 
-reindex_dps: NA
+reindex_docs: 349120
+reindex_dps: 1107.6 
