CLOUD-109/CLOUD-96 cleanup

--- a/data/bench/nco-56.yml
+++ b/data/bench/nco-56.yml
@@ -446,9 +446,9 @@ build_url: "https://qa.nuxeo.org/jenkins/job/Misc/job/nuxeo-nco-bench/56/"
 job_name: "Misc/nuxeo-nco-bench"
 dbprofile: "mongodb"
 bench_suite: "20w03 CLOUD-96 Check Readiness instance"
-nuxeonodes: 4
+nuxeonodes: 3
 esnodes: 3
-classifier: "NCP 5.0 CI Like bis"
+classifier: "NCP 5.0 CI Like"
 distribution: "10.10-HF19"
 default_category: "misc"
 kafka: false
