NXP-29529: add analysis

--- a/data/analysis/suite.yml
+++ b/data/analysis/suite.yml
@@ -1,4 +1,11 @@
 # Here you can comment bench suite using markdown"
+"20w44 NXP-29529 elastic 7 vs 6": "With Elastic 7 re-indexing is 20% faster, search 10%.
+
+
+The 60% gain on the read simulation is related to simon event counter removal [NXP-28012](https://jira.nuxeo.com/browse/NXP-28012.
+
+"
+
 "19w51 SUPINT-1615 Check Readiness instance": "**#nco-47 vs #1950**
 
 
