--- a/data/bench/2425.yml
+++ b/data/bench/2425.yml
@@ -448,7 +448,7 @@ dbprofile: "mongodb"
 bench_suite: "20w49 TL-345 Elastic shards"
 nuxeonodes: 2
 esnodes: 3
-classifier: ""
+classifier: "15 shards"
 distribution: "lastsnapshot"
 default_category: "misc"
 kafka: false
